--- a/activities.html
+++ b/activities.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     
    
-  <script src="script.js" defer ></script>
+  <script src="script.js"></script>
   </head>
 
   <body>
