Fixed quiz button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div> 
       
       <h3>Interactive quiz</h3>
-      <button id ="quiz">Quiz</button>
+      <a href "activities.html"><button id ="quiz">Quiz</button></a>
       <br>
 
       <footer id = "madeWithLove">Made with 🧡 by team Orangutan Synergy!</footer>
